--- a/package.json
+++ b/package.json
@@ -7,6 +7,17 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "prettier": "npx prettier --write --ignore-unknown ."
     },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npx lint-staged"
+        }
+    },
+    "lint-staged": {
+        "src/**/*.js": [
+            "npx pretty-quick --staged",
+            "npx eslint --fix src --ext .js"
+        ]
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/VictorNAGomes/api-MySeriesList.git"
@@ -26,7 +37,10 @@
         "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-n": "^16.0.1",
         "eslint-plugin-promise": "^6.1.1",
+        "husky": "^8.0.3",
+        "lint-staged": "^14.0.0",
         "prettier": "npm:@btmills/prettier@^3.0.0",
+        "pretty-quick": "^3.1.3",
         "typescript": "^5.1.6"
     }
 }
