--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
         }
     },
     "lint-staged": {
-        "src/**/*.js": [
-            "npx pretty-quick --staged",
-            "npx eslint --fix src --ext .js"
-        ]
+        "src/**/*.ts": "npx eslint --fix src --ext .ts"
     },
     "repository": {
         "type": "git",
@@ -40,7 +37,6 @@
         "husky": "^8.0.3",
         "lint-staged": "^14.0.0",
         "prettier": "npm:@btmills/prettier@^3.0.0",
-        "pretty-quick": "^3.1.3",
         "typescript": "^5.1.6"
     }
 }
