--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "husky": "^8.0.3",
         "lint-staged": "^14.0.0",
         "prettier": "npm:@btmills/prettier@^3.0.0",
+        "prisma": "^5.1.1",
         "typescript": "^5.1.6"
     }
 }
