--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vitest": "^0.34.1"
     },
     "dependencies": {
-        "@prisma/client": "^5.1.1"
+        "@prisma/client": "^5.1.1",
+        "zod": "^3.22.1"
     }
 }
